# dt-qp-py-project

./: environment.yaml  pyproject.toml
DTQPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dtqpy.egg-info/: PKG-INFO  SOURCES.txt
examples/Linear-Quadratic/BrysonDenham/: BrysonDenham.py
examples/Linear-Quadratic/fowt/: case_matrix.txt  case_matrix.yaml
examples/Linear-Quadratic/fowt/outputs/tower_doe/: ABCD_matrices.pkl  iea15mw-analysis.yaml  iea15mw-modeling.yaml  iea15mw.csv  iea15mw.npz  iea15mw.xlsx  iea15mw.yaml
src/solver/: DTQPy_SOLVER.py  DTQPy_SOLVER_pyoptsparse.py
