[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DTQPy"
version = "1.0"
description = 'Direct Transcription Quadratic Programming'
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3"}
keywords = ["optimal-control", "direct-transcription", "optimization"]
authors = [
  {name = "Herber Research Group", email = "Daniel.Herber@colostate.edu" }
]
maintainers = [
  {name = "Athul Krishna Sundarrajan", email ="Athul.Sundarrajan@colostate.edu"},
    {name = "Daniel R. Herber", email ="Daniel.Herber@colostate.edu"},
]
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",

  "License :: BSD-3",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "mat4py",
  "numpy",
  "scipy",
  "matplotlib",
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install sampleproject[dev]
#
# Similar to `dependencies` above, these must be valid existing
# projects.
[project.optional-dependencies] # Optional
test = ["coveralls", "pytest", "pytest-cov"]
opt = ["pyoptsparse"]
docs = ["sphinx",
	"sphinxcontrib-bibtex",
	"sphinx_rtd_theme>=1.3",
	"sphinxcontrib-applehelp",
  	"sphinxcontrib-devhelp",
	"sphinxcontrib-htmlhelp",
  	"sphinxcontrib-jsmath",
  	"sphinxcontrib-qthelp",
  	"sphinxcontrib-serializinghtml",
]
# List URLs that are relevant to your project
#
# This field corresponds to the "Project-URL" and "Home-Page" metadata fields:
# https://packaging.python.org/specifications/core-metadata/#project-url-multiple-use
# https://packaging.python.org/specifications/core-metadata/#home-page-optional
#
# Examples listed include a pattern for specifying where the package tracks
# issues, where the source is hosted, where to say thanks to the package
# maintainers, and where to support the project financially. The key is
# what's used to render the link text on PyPI.
[project.urls]  # Optional
"Homepage" = "https://github.com/AthulKrishnaSundarrajan/dt-qp-py-project"


# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
zip-safe = false
include-package-data = true


[tool.setuptools.packages.find]
exclude = ["docs", "tests", "ext"]
namespaces = true

[tool.setuptools.package-data]
# If there are data files included in your packages that need to be
# installed, specify them here.
"*" = [ "*.yaml", "*.yml", ".mat"]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["DTQPy"]

